--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.2.1
 Flask==3.1.2
 flask-bootstrap5==0.1.dev1
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 greenlet==3.2.4
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -12,3 +13,4 @@ PyYAML==6.0.2
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
+WTForms==3.2.1
